--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
             <div class="inner-content">
                 <div class="left">
                     <div class="left-row-one">
-                        <button class="clear">Clear</button>
+                        <button class="clear" id="clear">Clear</button>
                     </div>
                     <div class="left-row-two">
                         <button class="number" id="zero">0</button>
                     </div>
                     <div class="left-row-three">
-                        <button class="number">1</button>
-                        <button class="number">2</button>
-                        <button class="number">3</button>
+                        <button class="number" id="one">1</button>
+                        <button class="number" id="two">2</button>
+                        <button class="number" id="three">3</button>
                     </div>
                     <div class="left-row-four">
-                        <button class="number">4</button>
-                        <button class="number">5</button>
-                        <button class="number">6</button>
+                        <button class="number" id="four">4</button>
+                        <button class="number" id="five">5</button>
+                        <button class="number" id="six">6</button>
                     </div>
                     <div class="left-row-five">
-                        <button class="number">7</button>
-                        <button class="number">8</button>
-                        <button class="number">9</button>
+                        <button class="number" id="seven">7</button>
+                        <button class="number" id="eight">8</button>
+                        <button class="number" id="nine">9</button>
                     </div>
                 </div>
                 <div class="right">
-                    <button class="number" id="equals">=</button>
-                    <button class="number">+</button>
-                    <button class="number">-</button>
-                    <button class="number">x</button>
-                    <button class="number">/</button>
+                    <button class="operator" id="equals">=</button>
+                    <button class="operator" id="plus">+</button>
+                    <button class="operator" id="minus">-</button>
+                    <button class="operator" id="times">x</button>
+                    <button class="operator" id="div">/</button>
                 </div>
             </div>
         </div>
